@@ -24,9 +24,23 @@ package io.micronaut.scheduling;
 public interface TaskExecutors {
 
     /**
-     * The name of the {@link java.util.concurrent.ExecutorService} used to schedule I/O tasks.
+     * The name of the {@link java.util.concurrent.ExecutorService} used to schedule I/O tasks. By
+     * default, this is a {@link java.util.concurrent.Executors#newCachedThreadPool() cached thread pool}.
      */
     String IO = "io";
+
+    /**
+     * The name of the {@link java.util.concurrent.ExecutorService} used to schedule blocking tasks.
+     * If available, this will use {@link #VIRTUAL virtual threads}. Otherwise it will fall back to
+     * {@link #IO}.
+     */
+    String BLOCKING = "blocking";
+
+    /**
+     * Executor that runs tasks on virtual threads. This requires JDK 19+, and
+     * {@code --enable-preview}.
+     */
+    String VIRTUAL = "virtual";
 
     /**
      * The name of the {@link java.util.concurrent.ScheduledExecutorService} used to schedule background tasks.
