@@ -18,7 +18,6 @@ package io.micronaut.core.async.publisher;
 import io.micronaut.core.annotation.Internal;
 import io.micronaut.core.annotation.NonNull;
 import io.micronaut.core.annotation.TypeHint;
-import io.micronaut.core.async.subscriber.Completable;
 import io.micronaut.core.async.subscriber.CompletionAwareSubscriber;
 import io.micronaut.core.convert.ConversionService;
 import io.micronaut.core.optim.StaticOptimizations;
@@ -28,7 +27,7 @@ import org.reactivestreams.Subscriber;
 import org.reactivestreams.Subscription;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -38,6 +37,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
+import java.util.stream.Stream;
 
 /**
  * Utilities for working with raw {@link Publisher} instances. Designed for internal use by Micronaut and
@@ -50,15 +50,12 @@ import java.util.function.Supplier;
 @TypeHint(Publishers.class)
 public class Publishers {
 
-    @SuppressWarnings("ConstantName")
     private static final List<Class<?>> REACTIVE_TYPES;
-    @SuppressWarnings("ConstantName")
     private static final List<Class<?>> SINGLE_TYPES;
-
     private static final List<Class<?>> COMPLETABLE_TYPES;
 
     static {
-        List<Class<?>> reactiveTypes ;
+        List<Class<?>> reactiveTypes;
         List<Class<?>> singleTypes;
         List<Class<?>> completableTypes;
         ClassLoader classLoader = Publishers.class.getClassLoader();
@@ -72,36 +69,20 @@ public class Publishers {
             reactiveTypes = new ArrayList<>(3);
             singleTypes = new ArrayList<>(3);
             completableTypes = new ArrayList<>(3);
-            singleTypes.add(CompletableFuturePublisher.class);
-            singleTypes.add(JustPublisher.class);
-            completableTypes.add(Completable.class);
-            List<String> typeNames = Arrays.asList(
-                    "io.reactivex.Observable",
-                    "reactor.core.publisher.Flux",
-                    "kotlinx.coroutines.flow.Flow",
-                    "io.reactivex.rxjava3.core.Flowable",
-                    "io.reactivex.rxjava3.core.Observable"
-            );
-            for (String name : typeNames) {
-                Optional<Class> aClass = ClassUtils.forName(name, classLoader);
+            for (String name : getNonSpecificReactiveTypeNames()) {
+                Optional<Class<?>> aClass = ClassUtils.forName(name, classLoader);
                 aClass.ifPresent(reactiveTypes::add);
             }
-            for (String name : Arrays.asList(
-                    "io.reactivex.Single",
-                    "reactor.core.publisher.Mono",
-                    "io.reactivex.Maybe",
-                    "io.reactivex.rxjava3.core.Single",
-                    "io.reactivex.rxjava3.core.Maybe"
-            )) {
-                Optional<Class> aClass = ClassUtils.forName(name, classLoader);
+            for (String name : getSingleTypeNames()) {
+                Optional<Class<?>> aClass = ClassUtils.forName(name, classLoader);
                 aClass.ifPresent(aClass1 -> {
                     singleTypes.add(aClass1);
                     reactiveTypes.add(aClass1);
                 });
             }
 
-            for (String name : Arrays.asList("io.reactivex.Completable", "io.reactivex.rxjava3.core.Completable")) {
-                Optional<Class> aClass = ClassUtils.forName(name, classLoader);
+            for (String name : getCompletableTypeNames()) {
+                Optional<Class<?>> aClass = ClassUtils.forName(name, classLoader);
                 aClass.ifPresent(aClass1 -> {
                     completableTypes.add(aClass1);
                     reactiveTypes.add(aClass1);
@@ -111,6 +92,49 @@ public class Publishers {
         REACTIVE_TYPES = reactiveTypes;
         SINGLE_TYPES = singleTypes;
         COMPLETABLE_TYPES = completableTypes;
+    }
+
+    @NonNull
+    private static List<String> getSingleTypeNames() {
+        return List.of(
+            "io.micronaut.core.async.publisher.CompletableFuturePublisher",
+            "io.micronaut.core.async.publisher.Publishers$JustPublisher",
+            "io.reactivex.Single",
+            "reactor.core.publisher.Mono",
+            "io.reactivex.Maybe",
+            "io.reactivex.rxjava3.core.Single",
+            "io.reactivex.rxjava3.core.Maybe"
+        );
+    }
+
+    @NonNull
+    private static List<String> getCompletableTypeNames() {
+        return List.of(
+            "io.reactivex.Completable",
+            "io.reactivex.rxjava3.core.Completable",
+            "io.micronaut.core.async.subscriber.Completable"
+        );
+    }
+
+    @NonNull
+    private static List<String> getNonSpecificReactiveTypeNames() {
+        return List.of(
+            "io.reactivex.Observable",
+            "reactor.core.publisher.Flux",
+            "kotlinx.coroutines.flow.Flow",
+            "io.reactivex.rxjava3.core.Flowable",
+            "io.reactivex.rxjava3.core.Observable"
+        );
+    }
+
+    @NonNull
+    public static List<String> getReactiveTypeNames() {
+        return Stream.of(
+            getNonSpecificReactiveTypeNames(),
+            getSingleTypeNames(),
+            getCompletableTypeNames(),
+            List.of("org.reactivestreams.Publisher")
+        ).flatMap(Collection::stream).toList();
     }
 
     /**
@@ -152,7 +176,7 @@ public class Publishers {
      * @return A list of known reactive types.
      */
     public static List<Class<?>> getKnownReactiveTypes() {
-        return Collections.unmodifiableList(new ArrayList<>(REACTIVE_TYPES));
+        return List.copyOf(REACTIVE_TYPES);
     }
 
     /**
@@ -402,7 +426,7 @@ public class Publishers {
         if (Publisher.class.isAssignableFrom(type)) {
             return true;
         } else {
-            if (type.isPrimitive() || packageOf(type).startsWith("java.")) {
+            if (type.isPrimitive() || type.getName().startsWith("java.")) {
                 return false;
             }
             for (Class<?> reactiveType : REACTIVE_TYPES) {
@@ -442,27 +466,43 @@ public class Publishers {
     /**
      * Attempts to convert the publisher to the given type.
      *
-     * @param object The object to convert
+     * @param object        The object to convert
      * @param publisherType The publisher type
-     * @param <T> The generic type
+     * @param <T>           The generic type
      * @return The Resulting in publisher
+     * @deprecated replaced by {@link #convertPublisher(ConversionService, Object, Class)}
      */
+    @Deprecated(since = "4", forRemoval = true)
     public static <T> T convertPublisher(Object object, Class<T> publisherType) {
+        return convertPublisher(ConversionService.SHARED, object, publisherType);
+    }
+
+    /**
+     * Attempts to convert the publisher to the given type.
+     *
+     * @param conversionService The conversion service
+     * @param object            The object to convert
+     * @param publisherType     The publisher type
+     * @param <T>               The generic type
+     * @return The Resulting in publisher
+     * @since 4.0.0
+     */
+    public static <T> T convertPublisher(ConversionService conversionService, Object object, Class<T> publisherType) {
         Objects.requireNonNull(object, "Argument [object] cannot be null");
         Objects.requireNonNull(publisherType, "Argument [publisherType] cannot be null");
         if (publisherType.isInstance(object)) {
             return (T) object;
         }
-        if (object instanceof CompletableFuture) {
-            @SuppressWarnings("unchecked") Publisher<T> futurePublisher = Publishers.fromCompletableFuture(() -> ((CompletableFuture) object));
-            return ConversionService.SHARED.convert(futurePublisher, publisherType)
-                    .orElseThrow(() -> unconvertibleError(object, publisherType));
-        } else if (object instanceof MicronautPublisher && MicronautPublisher.class.isAssignableFrom(publisherType)) {
-            return (T) object;
-        } else {
-            return ConversionService.SHARED.convert(object, publisherType)
+        if (object instanceof CompletableFuture cf && !(object instanceof Publisher<?>)) {
+            @SuppressWarnings("unchecked") Publisher<T> futurePublisher = Publishers.fromCompletableFuture(() -> cf);
+            return conversionService.convert(futurePublisher, publisherType)
                     .orElseThrow(() -> unconvertibleError(object, publisherType));
         }
+        if (object instanceof MicronautPublisher && MicronautPublisher.class.isAssignableFrom(publisherType)) {
+            return (T) object;
+        }
+        return conversionService.convert(object, publisherType)
+                .orElseThrow(() -> unconvertibleError(object, publisherType));
     }
 
     /**
