@@ -15,8 +15,8 @@
  */
 package io.micronaut.annotation.processing;
 
+import io.micronaut.annotation.processing.visitor.JavaNativeElement;
 import io.micronaut.core.annotation.Nullable;
-import io.micronaut.core.reflect.ReflectionUtils;
 import io.micronaut.core.util.ArrayUtils;
 import io.micronaut.inject.writer.AbstractClassWriterOutputVisitor;
 import io.micronaut.inject.writer.ClassGenerationException;
@@ -28,16 +28,18 @@ import javax.tools.FileObject;
 import javax.tools.JavaFileObject;
 import javax.tools.StandardLocation;
 import java.io.FileNotFoundException;
-import java.io.FilterOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.Reader;
 import java.io.Writer;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
 import java.net.URI;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 /**
  * An implementation of {@link io.micronaut.inject.writer.ClassWriterOutputVisitor} for annotation processing.
@@ -46,18 +48,6 @@ import java.util.*;
  * @since 1.0
  */
 public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutputVisitor {
-
-    private static final Field FILTER_OUTPUT_STREAM_OUT = ReflectionUtils.findField(FilterOutputStream.class, "out")
-        .map(field -> {
-            try {
-                addOpenJavaModules(FilterOutputStream.class, AnnotationProcessingOutputVisitor.class);
-                field.setAccessible(true);
-                return field;
-            } catch (Exception e) {
-                return null;
-            }
-        })
-        .orElse(null);
 
     private final Filer filer;
     private final Map<String, Optional<GeneratedFile>> metaInfFiles = new LinkedHashMap<>();
@@ -71,24 +61,11 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
     public AnnotationProcessingOutputVisitor(Filer filer) {
         super(isEclipseFiler(filer));
         this.filer = filer;
-        final String filerName = filer.getClass().getName();
-        this.isGradleFiler = filerName.startsWith("org.gradle.api") || filerName.startsWith("org.jetbrains.kotlin.kapt3");
-    }
-
-    //--add-opens=java.base/$hostPackageName=ALL-UNNAMED
-    private static void addOpenJavaModules(Class<?> hostClass, Class<?> targetClass) {
-        // For Java 9 and above
-        try {
-            Method getModule = Class.class.getMethod("getModule");
-            Class<?> module = getModule.getReturnType();
-            Method getPackageName = Class.class.getMethod("getPackageName");
-            Method addOpens = module.getMethod("addOpens", String.class, module);
-            Object hostModule = getModule.invoke(hostClass);
-            String hostPackageName = (String) getPackageName.invoke(hostClass);
-            Object actionModule = getModule.invoke(targetClass);
-            addOpens.invoke(hostModule, hostPackageName, actionModule);
-        } catch (Exception e) {
-            // Ignore
+        if (filer != null) {
+            final String filerName = filer.getClass().getName();
+            this.isGradleFiler = filerName.startsWith("org.gradle.api") || filerName.startsWith("org.jetbrains.kotlin.kapt3");
+        } else {
+            this.isGradleFiler = false;
         }
     }
 
@@ -110,8 +87,8 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
                 // gradle filer only support single originating element for isolating processors
                 final io.micronaut.inject.ast.Element e = originatingElements[0];
                 final Object nativeType = e.getNativeType();
-                if (nativeType instanceof Element) {
-                    nativeOriginatingElements = new Element[] { (Element) nativeType };
+                if (nativeType instanceof JavaNativeElement javaNativeElement) {
+                    nativeOriginatingElements = new Element[] { javaNativeElement.element() };
                 } else {
                     nativeOriginatingElements = new Element[0];
                 }
@@ -120,8 +97,8 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
                 List<Element> list = new ArrayList<>(originatingElements.length);
                 for (io.micronaut.inject.ast.Element originatingElement : originatingElements) {
                     Object nativeType = originatingElement.getNativeType();
-                    if (nativeType instanceof Element) {
-                        list.add((Element) nativeType);
+                    if (nativeType instanceof JavaNativeElement javaNativeElement) {
+                        list.add(javaNativeElement.element());
                     }
                 }
                 nativeOriginatingElements = list.toArray(new Element[0]);
@@ -130,8 +107,7 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
             nativeOriginatingElements = new Element[0];
         }
         javaFileObject = filer.createClassFile(classname, nativeOriginatingElements);
-        OutputStream os = javaFileObject.openOutputStream();
-        return unwrapFilterOutputStream(os);
+        return javaFileObject.openOutputStream();
     }
 
     @Override
@@ -143,7 +119,7 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
                     StandardLocation.CLASS_OUTPUT,
                     "",
                     path,
-                    (Element) originatingElement.getNativeType()
+                    ((JavaNativeElement) originatingElement.getNativeType()).element()
             );
             try (Writer w = fileObject.openWriter()) {
                 w.write("");
@@ -153,69 +129,29 @@ public class AnnotationProcessingOutputVisitor extends AbstractClassWriterOutput
         }
     }
 
-    private OutputStream unwrapFilterOutputStream(OutputStream os) {
-        // https://bugs.openjdk.java.net/browse/JDK-8255729
-        // FilterOutputStream and JavacFiler$FilerOutputStream is always using write(int) and killing performance, unwrap if possible
-        if (FILTER_OUTPUT_STREAM_OUT != null && os instanceof FilterOutputStream) {
-            try {
-                OutputStream osToWrite = (OutputStream) FILTER_OUTPUT_STREAM_OUT.get(os);
-                if (osToWrite == null) {
-                    return os;
-                }
-                return new OutputStream() {
-                    @Override
-                    public void write(int b) throws IOException {
-                        osToWrite.write(b);
-                    }
-
-                    @Override
-                    public void write(byte[] b) throws IOException {
-                        osToWrite.write(b);
-                    }
-
-                    @Override
-                    public void write(byte[] b, int off, int len) throws IOException {
-                        osToWrite.write(b, off, len);
-                    }
-
-                    @Override
-                    public void flush() throws IOException {
-                        osToWrite.flush();
-                    }
-
-                    @Override
-                    public void close() throws IOException {
-                        // Close original output stream
-                        os.close();
-                    }
-                };
-            } catch (Exception e) {
-                // Use original output stream if we cannot unwrap it
-                return os;
-            }
-        }
-        return os;
-    }
-
-    @Override
-    @Deprecated
-    public Optional<GeneratedFile> visitMetaInfFile(String path) {
-        return visitMetaInfFile(path, io.micronaut.inject.ast.Element.EMPTY_ELEMENT_ARRAY);
-    }
-
     @Override
     public Optional<GeneratedFile> visitMetaInfFile(String path, io.micronaut.inject.ast.Element... originatingElements) {
         return metaInfFiles.computeIfAbsent(path, s -> {
             String finalPath = "META-INF/" + path;
-            Element[] nativeOriginatingElements = Arrays.stream(originatingElements)
-                    .map(e -> (Element) e.getNativeType()).toArray(Element[]::new);
+            Element[] nativeOriginatingElements = toNativeOriginatingElements(originatingElements);
             return Optional.of(new GeneratedFileObject(finalPath, nativeOriginatingElements));
         });
+    }
+
+    private static Element[] toNativeOriginatingElements(io.micronaut.inject.ast.Element[] originatingElements) {
+        return Arrays.stream(originatingElements)
+                .map(e -> ((JavaNativeElement) e.getNativeType()).element()).toArray(Element[]::new);
     }
 
     @Override
     public Optional<GeneratedFile> visitGeneratedFile(String path) {
         return generatedFiles.computeIfAbsent(path, s -> Optional.of(new GeneratedFileObject(path, StandardLocation.SOURCE_OUTPUT)));
+    }
+
+    @Override
+    public Optional<GeneratedFile> visitGeneratedFile(String path, io.micronaut.inject.ast.Element... originatingElements) {
+        Element[] nativeOriginatingElements = toNativeOriginatingElements(originatingElements);
+        return generatedFiles.computeIfAbsent(path, s -> Optional.of(new GeneratedFileObject(path, StandardLocation.SOURCE_OUTPUT, nativeOriginatingElements)));
     }
 
     /**
